[package]
name = "orderbook"
version = "0.1.0"
edition = "2018"
[lib]
name = "orderbooklib"
path = "src/lib.rs"

[[bin]]
name = "orderbook-bin"
path = "src/main.rs"

[profile.release]
lto = true
[profile.bench]
debug = true

[dependencies]
rand = "0.8.4"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "order_benchmark"
harness = false
